<resources>
    <string name="app_name">FileDownload</string>
    <string name="ok">OK</string>
    <string name="don_t_allow">Deny</string>
    <string name="allow">Allow</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission">Storage Permission is needed</string>
    <string name="storage_permission_disclosure">App needs to access storage to save the downloaded file.</string>

    <string name="status">Status</string>
    <string name="link_url">Link Url</string>
    <string name="link_below">Link Below</string>
    <string name="download_total">Total Download</string>
    <string name="progress">Progress</string>
    <string name="download">Download</string>
    <string name="file_downloaded">File Downloaded</string>
</resources>